# esp32-hello

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Cargo.toml  bindgen.sh
main/esp-idf-sys/: Cargo.toml
main/esp-idf-sys/src/: bindings.h  bindings.rs  lib.rs
main/src/: app.rs  delay.rs  errors.rs  freertos_task.rs  freertos_units.rs  i2c.rs  lib.rs  print.rs  wifi.rs
