[package]
name = "esp32-hello-rust-main"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
cstr_core = { version = "0.2.0", features = ["alloc"] }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
esp-idf-alloc = "0.1.0"
esp-idf-sys = { path = "./esp-idf-sys/" }
genio = { version = "0.2.0", default-features = false }
nb = { version = "0.1.1", features = ["unstable"] }
ssd1306 = "0.3.1"

[profile.dev]
lto = false 
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = false
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1
