[package]
name = "esp32-hello-rust-main"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
cstr_core = { version = "0.2.0", features = ["alloc"] }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
esp-idf-hal = { git = "https://github.com/rbtying/esp-idf-hal", features = ["alloc"], default-features = false }
esp-idf-alloc = "0.1"
esp_idf_sys = "0.1"
ssd1306 = "0.3.1"

[profile.dev]
lto = false 
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = false
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

# We should rely on our own `bindgen` outputs, since they may change what
# headers are available to us!
[patch.crates-io]
esp_idf_sys = { path = './esp-idf-sys' }
