[package]
name = "esp_idf_sys"
version = "0.1.2"
edition = "2018"

[profile.dev]
lto = false 
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = false
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1
